--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="contents">
                             <div class="worksTop">
                                 <a href="https://drive.google.com/file/d/1bkijOPWkBeC0qCUMr0Q5Nvq4PtyZZ-iV/view?usp=sharing" target="_blank">
-                                    <img src="img/chimerand.png" alt="アイコン" title="アイコン">
+                                    <img src="img/chimerand.png" width=100% height=100% alt="アイコン" title="アイコン">
                                 </a>
                             </div>
                             <p>キメランド</p>
