--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="contents">
                             <div class="worksTop">
                                 <a href="https://github.com/mighty74/todoproject" target="_blank">
-                                    <img src="img/twittericon.png" alt="アイコン" title="アイコン">
+                                    <img src="img/twittericon.png" width=100% height=100% alt="アイコン" title="アイコン">
                                 </a>
                             </div>
                             <p>todoリスト</p>
@@ -102,7 +102,7 @@
                         <div class="contents">
                             <div class="worksTop">
                                 <a href="https://github.com/mighty74/todoproject" target="_blank">
-                                    <img src="img/twittericon.png" alt="アイコン" title="アイコン">
+                                    <img src="img/twittericon.png" width=100% height=100% alt="アイコン" title="アイコン">
                                 </a>
                             </div>
                             <p>null</p>
