--- a/index.html
+++ b/index.html
@@ -7,114 +7,141 @@
         <meta name="viewport" content="width=device-width" >
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/skills.css">
     </head>  
     
     <body>
-        <div class="background1">
-            <div class="topArea">
-                <div class="contents">
-                    <div class="top">
-                        <img src="img/twittericon.png" alt="アイコン" title="アイコン">
-                    </div>
-                    <h1>Hori Kosuke</h1>
-                    <h1>堀　孝輔</h1>
-                    <p class="text2">Engineer</p>
-                    <p class="text1">Affiliation</p>
-                    <ul>
-                        <li>近畿大学理工学部情報学科3年メディアコース</li>
-                        <li><a href="https://www.kindai-csg.dev/" target="_blank">近畿大学電子計算機研究会</a>元会計管理部門長</li>
-                        <li><a href="https://act-kithub.github.io/" target="_blank">KINDAI Info-Tech HUB</a> 役員</li>
-                    </ul>
-                    <div class="contentItem">
-                        <div class="icon">
-                            <img src="img/sozai_cman_jp_20230206194127.png" width=60% height=90% alt="位置アイコン" title="位置アイコン">
-                        </div>
-                        <p class="text1">Osaka</p>
-                    </div>
-                    <div class="contentItem">
-                        <div class="icon">
-                            <img src="img/sozai_cman_jp_20230206194148.png" width=80% height=70% alt="メールアイコン" title="メールアイコン">
-                        </div>
-                        <p class="text1">k.hori0704@gmail.com</p>
-                    </div>
-                    <div class="contentItem">
-                        <p class="text1">null</p>
-                        <p class="text1">null</p>
-                    </div>
-                </div>
-            </div>
-            <div class="skillsArea">
-                <div class="contents">
-                    <h1>Skills</h1>
-                    <div class="contentItem">
-                        <div class="contents">
-                            <p>Languages</p>
-                            <p class="text1">Java</p>
-                            <p class="text1">JavaScript</p>
-                            <p class="text1">Python</p>
-                            <p class="text1">HTML</p>
-                            <p class="text1">CSS</p>
-                            <p>Tools</p>
-                            <p class="text1">VScode</p>
-                            <p class="text1">GitHub</p>
-                            <p class="text1">Docker</p>
-                        </div>
-                        <div class="contents">
-                            <p>AI</p>
-                            <p class="text1">keras</p>
-                            <p class="text1">sklearn</p>
-                            <p class="text1">cnn</p>
-                            <p>CV</p>
-                            <p class="text1">OpenCV</p>
-                            <p class="text1">Openpifpaf</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="top">
+            <h1 class="text1">
+                Hori Kosuke's Portfolio
+            </h1>
         </div>
-        <div class="background2">
-            <div class="worksArea">
+        <div class="main">
+            <div class="about">
+                <div class="title">
+                    <h1>About</h1>
+                </div>
                 <div class="contents">
-                    <h1>Works</h1>
-                    <div class="worksItem">
-                        <div class="contents">
-                            <div class="worksTop">
-                                <a href="https://drive.google.com/file/d/1bkijOPWkBeC0qCUMr0Q5Nvq4PtyZZ-iV/view?usp=sharing" target="_blank">
-                                    <img src="img/chimerand.png" alt="アイコン" title="アイコン">
-                                </a>
-                            </div>
-                            <p>キメランド</p>
-                            <p class="text2">2Dゲーム</p>
-                            <p class="text1">近畿大学電子計算機研究会でのハッカソンにてUnityを用いて製作した2Dアクションゲームです。</p>
-                        </div>
-                        <div class="contents">
-                            <div class="worksTop">
-                                <a href="https://github.com/mighty74/todoproject" target="_blank">
-                                    <img src="img/twittericon.png" alt="アイコン" title="アイコン">
-                                </a>
-                            </div>
-                            <p>todoリスト</p>
-                            <p class="text2">Webアプリ</p>
-                            <p class="text1">Djangoを用いて個人で作成したtodoリストです。</p>
-                        </div>
+                    <div class="aboutImg">
+                        <img src="./img/aboutme.jpg" width="100%" height="100%">
                     </div>
-                    <div class="worksItem">
-                        <div class="contents">
-                            <div class="worksTop">
-                                <a href="https://github.com/mighty74/todoproject" target="_blank">
-                                    <img src="img/twittericon.png" alt="アイコン" title="アイコン">
-                                </a>
+                    <div class="aboutContents">
+                        <h1>Hori Kosuke (堀 孝輔)</h1>
+                        <p class="text2">Engineer</p>
+                        <p class="text3">Affiliation</p>
+                        <ul>
+                            <li>近畿大学理工学部情報学科3年メディアコース</li>
+                            <li><a href="https://www.kindai-csg.dev/" target="_blank">近畿大学電子計算機研究会</a>元会計管理部門長</li>
+                            <li><a href="https://act-kithub.github.io/" target="_blank">KINDAI Info-Tech HUB</a> 役員</li>
+                        </ul>
+                        <div class="contentItem">
+                            <div class="icon">
+                                <img src="img/sozai_cman_jp_20230206194127.png" width=60% height=90% alt="位置アイコン" title="位置アイコン">
                             </div>
-                            <p>null</p>
-                            <p class="text2">null</p>
-                            <p class="text1">null</p>
+                            <p class="text4">Osaka</p>
+                        </div>
+                        <div class="contentItem">
+                            <div class="icon">
+                                <img src="img/sozai_cman_jp_20230206194148.png" width=80% height=70% alt="メールアイコン" title="メールアイコン">
+                            </div>
+                            <p class="text4">k.hori0704@gmail.com</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="editArea">
+            <div class="skills">
+                <div class="title">
+                    <h1>Skills</h1>
+                </div>
+                <div class="contentSkill">
+                    <div class="area">
+                        <input type="radio" name="tab_name" id="tab1" checked>
+                        <label class="tab_class" for="tab1">Languages</label>
+                        <div class="content_class">
+                            <img src="img/python.png" width=100% alt="pythonアイコン" title="pythonアイコン">
+                            <img src="img/Java.png" width=100% alt="javaアイコン" title="javaアイコン">
+                            <img src="img/JS.png" width=100% alt="jsアイコン" title="jsアイコン">
+                            <img src="img/HTML.png" width=100% alt="htmlアイコン" title="htmlアイコン">
+                            <img src="img/CSS.png" width=100% alt="cssアイコン" title="cssアイコン">
+                        </div>
+                        <input type="radio" name="tab_name" id="tab2" >
+                        <label class="tab_class" for="tab2">Tools</label>
+                        <div class="content_class">
+                            <img src="img/VScode.png" width=100% alt="VScodeアイコン" title="VScodeアイコン">
+                            <img src="img/github.png" width=100% alt="githubアイコン" title="githubアイコン">
+                            <img src="img/docker.png" width=100% alt="dockerアイコン" title="dockerアイコン">
+                            <img src="img/firebase.png" width=100% alt="firebaseアイコン" title="firebaseアイコン">
+                        </div>
+                        <input type="radio" name="tab_name" id="tab3" >
+                        <label class="tab_class" for="tab3">AI</label>
+                        <div class="content_class">
+                            <img src="img/keras.png" width=100% alt="kerasアイコン" title="kerasアイコン">
+                            <img src="img/sklearn.png" width=100% alt="sklearnアイコン" title="sklearnアイコン">
+                            <img src="img/cnn.png" width=100% alt="cnnアイコン" title="cnnアイコン">
+                        </div>
+                        <input type="radio" name="tab_name" id="tab4" >
+                        <label class="tab_class" for="tab4">CV</label>
+                        <div class="content_class">
+                            <img src="img/OpenCV.png" width=100% alt="OpenCVアイコン" title="OpenCVアイコン">
+                            <img src="img/OpenPifPaf.png" width=100% alt="OpenPifPafアイコン" title="OpenPifPafアイコン">
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="works">
+                <div class="title">
+                    <h1>Works</h1>
+                </div>
                 <div class="contents">
-                    <p class="text2">Recent edits 2023/2/6</p>
+                    <div class="contentWorks">
+                        <div class="work">
+                            <div class="worksImg">
+                                <a href="https://drive.google.com/file/d/1bkijOPWkBeC0qCUMr0Q5Nvq4PtyZZ-iV/view?usp=sharing" target="_blank">
+                                    <img src="img/chimerand.png" width=100% height=100% alt="アイコン" title="アイコン">
+                                </a>
+                            </div>
+                            <p class="text5">キメランド</p>
+                            <p class="text6">2Dゲーム</p>
+                            <p class="text7">電算研でのハッカソンにて製作した2Dアクションゲームです。</p>
+                        </div>
+                        <div class="work">
+                            <div class="worksImg">
+                                <a href="https://drive.google.com/file/d/1bkijOPWkBeC0qCUMr0Q5Nvq4PtyZZ-iV/view?usp=sharing" target="_blank">
+                                    <img src="img/navitimeAPI.png" width=120% height=100% alt="アイコン" title="アイコン">
+                                </a>
+                            </div>
+                            <p class="text5">ナビアプリ</p>
+                            <p class="text6">Webアプリ</p>
+                            <p class="text7">ナビタイムAPIを用いて作成したWebアプリです。</p>
+                        </div>
+                        <div class="work">
+                            <div class="worksImg">
+                                <a href="https://github.com/mighty74/todoproject" target="_blank">
+                                    <img src="img/todolist.png" width=100% height=100% alt="アイコン" title="アイコン">
+                                </a>
+                            </div>
+                            <p class="text5">todoリスト</p>
+                            <p class="text6">Webアプリ</p>
+                            <p class="text7">Djangoを用いて個人で作成したtodoリストです。</p>
+                        </div>
+                        <div class="work">
+                            <div class="worksImg">
+                                <a href="https://github.com/mighty74/membermanage" target="_blank">
+                                    <img src="img/todolist.png" width=100% height=100% alt="アイコン" title="アイコン">
+                                </a>
+                            </div>
+                            <p class="text5">部員管理アプリ</p>
+                            <p class="text6">Webアプリ</p>
+                            <p class="text7">Djangoを用いて個人で作成したメンバー管理アプリです。</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="works">
+                <div class="title">
+                </div>
+                <div class="contents">
+                    <p class="text3">Recent edit 2023/2/9</p>
                 </div>
             </div>
         </div>
